fix menu visibility when not active, add aria labels for links

--- a/src/scss/layout/container.scss
+++ b/src/scss/layout/container.scss
@@ -9,11 +9,19 @@
   text-decoration: none;
 //   cursor: crosshair;
 }
-html{
+body{
     background-color: var(--surface1);
     overflow-x: hidden;
 }
-
+// .sr-only:not(:focus):not(:active) {
+//   clip: rect(0 0 0 0); 
+//   clip-path: inset(50%);
+//   height: 1px;
+//   overflow: hidden;
+//   position: absolute;
+//   white-space: nowrap; 
+//   width: 1px;
+// }
 .container {
   max-width: 1320px;
   z-index: 2;
